--- a/css/hero.css
+++ b/css/hero.css
@@ -1,16 +1,80 @@
 body{
     margin: 0;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-size: 20px;
+    line-height: 30px;
 }
+
 header{
-    background-color: cornflowerblue;
+    background-color: #bccd67;
     text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+h1, h2{
+    font-family: 'Slackey', cursive;
 }
 
 header h1{
     color: white;
+    font-size: 50px;
 }
 
 header img{
-    border-radius: 150px;
+    background-color: white;
+    border-radius: 350px;
+    width: 250px;
+    border: 10px solid black;
 }
 
+main{
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+main img{
+    max-width: 100%;
+}
+
+h2{
+    font-size: 35px;
+    color:#721330;
+    margin: 0 40px 0 10px;
+}
+
+a{
+    color: #721330;
+}
+
+a:hover{
+    color:white;
+    background-color:#c1637f;
+}
+
+footer{
+    background-color: #bccd67;
+    text-align: center;
+    color:white;
+    padding: 50px;
+}
+
+footer p{
+    margin: 0;
+}
+
+footer a{
+    color: white;
+}
+
+footer a:hover{
+    opacity: 0.5%;
+    background-color: transparent;
+}
+
+p.caption{
+    color:#999999;
+    font-style: italic;
+    margin-top: 0;
+}
